<resources>
    <string name="app_name">CartmaxApperals</string>
    <string name="cartmaxAppreals">CartmaxApperals</string>
    <string name="onlineclothingstore">Online Clothing Store</string>
    <string name="forward">Forward</string>
    <string name="getstarted">Get Started</string>
    <string name="admin">I am an Admin</string>
    <string name="customer">I am an Customer</string>
    <string name="adminlogin">Admin Login</string>
    <string name="username" />
    <string name="password" />
    <string name="login">Log In</string>
    <string name="noaccount">Do not have an Account</string>
    <string name="customerlogin">Customer Login</string>
    <string name="signup">Sign Up</string>
    <string name="name" />
    <string name="contactnumber" />
    <string name="email" />
    <string name="register">Register</string>
    <string name="back">Back</string>
<<<<<<< Updated upstream
=======
    <string name="adminregistration">Admin Registration</string>
    <string name="todo">TODO</string>
    <string name="paymentdetails">Payment Details</string>
    <string name="totalprice">Total Price</string>
    <string name="price">/=</string>
    <string name="cardno">Card Number</string>
    <string name="validuntil">Valid Until</string>
    <string name="cvv">CVV</string>
    <string name="cardholder">Card Holder</string>
    <string name="savecard">Save card details for future payments</string>
    <string name="confirm">Proceed to confirm</string>
>>>>>>> Stashed changes
</resources>